task4: Creating Login Screen Frontend

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -18,11 +18,11 @@
           <h1 class="title">Sign In</h1>
           <div class="input-field">
             <i class="fas fa-envelope"></i>
-            <input type="email" placeholder="Enter your email" required>
+            <input type="email" placeholder="Enter your email" required name="loginEmail">
           </div>
           <div class="input-field">
             <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Password" required>
+            <input type="password" placeholder="Password" required name="loginPasswprd">
           </div>
           <p class="forgotpas"><a>Forgot Password?</a></p>
           <input type="submit" value="log in" class="btn solid">
@@ -77,5 +77,11 @@
   </div>
 
   <script src="/js/login.js"></script>
+  <script 
+    src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js" 
+    integrity="sha512-JSCFHhKDilTRRXe9ak/FJ28dcpOJxzQaCd3Xg8MyF6XFjODhy/YMCM8HW0TFDckNHWUewW+kfvhin43hKtJxAw==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer">
+  </script>
 
 </html>
