--- a/public/views/login.html
+++ b/public/views/login.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="forms-container">
       <div class="signin-signup">
-        <form action="#" class="sign-in-form">
+        <form action="/user/login" method="post" class="sign-in-form">
           <h1 class="title">Sign In</h1>
           <div class="input-field">
             <i class="fas fa-envelope"></i>
