task 9:Its time to make money

--- a/public/views/homePage.html
+++ b/public/views/homePage.html
@@ -51,14 +51,14 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/">Reports &#128081</a>
+                    <a href="#" id="reportsLink" onclick="onClickAlert();">Reports &#128081</a>
                 </li>
                 <li>
-                    <a href="/">LeaderBoard &#128081</a>
+                    <a href="#" id="leaderboardLink" onclick="onClickAlert();">LeaderBoard &#128081</a>
                 </li>
             </ul>
             <section class="mobile-nav-button">
-                <button class="btn transparent">
+                <button class="btn transparent" id="buyPremiumBtn">
                     Buy Premium &#128081
                 </button>
                 <button class="btn solid">
@@ -178,6 +178,12 @@
 
 
     <script src="../js/homePage.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script>
+            function onClickAlert() {
+              alert("Buy Premium to access this feature.");
+            }
+    </script>
 </body>
 
 </html>
