Task 15: Sending Reset Password Link

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -24,7 +24,7 @@
             <i class="fas fa-lock"></i>
             <input type="password" placeholder="Password" required name="loginPasswprd">
           </div>
-          <p class="forgotpas"><a>Forgot Password?</a></p>
+          <p class="forgotpas"><a href="/password/forgotPasswordPage">Forgot Password?</a></p>
           <input type="submit" value="log in" class="btn solid">
         </form>
 
